# back/src/api/swagger/swagger.yaml
@@ -31,7 +31,7 @@ paths:
         - user
         - sites
       summary: get list of the users sites
-      description: returns a list of the sites for q given user
+      description: returns a list of the sites for a given user
       parameters:
         - name: userId
           in: path
@@ -80,6 +80,35 @@ paths:
                 items:
                   type: object
                   $ref: '#/components/schemas/colour'
+
+  /sites/{userId}/{siteId}/colourpalette:
+    get: 
+      tags:
+        - sites
+        - site
+        - colours
+      summary: return the site's defined colour palette
+      description: return the site's defined colour palette
+      parameters:
+        - name: userId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: siteId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: returns a json array of string hex codes representing the different colours that make up the palette
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: string
 
   /sites/{userId}/{siteId}:
     post:
